--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_margin="5dp">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="90dp"
         android:orientation="horizontal"
         android:padding="5dp">
 
@@ -31,10 +32,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text=".?"
-            android:textSize="50sp"
             android:background="@drawable/shape"
-            android:textColor="@color/white"/>
+            android:text=".?"
+            android:textColor="@color/white"
+            android:textSize="50sp" />
 
         <Button
             android:id="@+id/O1"
@@ -43,38 +44,38 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
+            android:background="@drawable/shape"
             android:text=".?"
             android:textColor="@color/white"
-            android:textSize="50sp"
-            android:background="@drawable/shape"/>
+            android:textSize="50sp" />
 
         <Button
             android:id="@+id/Y1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/shape"
             android:text=".?"
             android:textColor="@color/white"
-            android:textSize="50sp"
-            android:background="@drawable/shape"/>
+            android:textSize="50sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="90dp"
         android:orientation="horizontal"
-        android:padding="5dp"
-        >
+        android:padding="5dp">
 
         <Button
             android:id="@+id/B2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/shape"
             android:text=".?"
             android:textColor="@color/white"
-            android:textSize="50sp" android:background="@drawable/shape"/>
+            android:textSize="50sp" />
 
         <Button
             android:id="@+id/R2"
@@ -83,26 +84,26 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:textColor="@color/white"
+            android:background="@drawable/shape"
             android:text=".?"
-            android:textSize="50sp"
-            android:background="@drawable/shape"/>
+            android:textColor="@color/white"
+            android:textSize="50sp" />
 
         <Button
             android:id="@+id/G1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/shape"
             android:text=".?"
             android:textColor="@color/white"
-            android:textSize="50sp"
-            android:background="@drawable/shape" />
+            android:textSize="50sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="90dp"
         android:orientation="horizontal"
         android:padding="5dp">
 
@@ -111,10 +112,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/shape"
             android:text=".?"
             android:textColor="@color/white"
-            android:textSize="50dp"
-            android:background="@drawable/shape"/>
+            android:textSize="50dp" />
 
         <Button
             android:id="@+id/B1"
@@ -123,20 +124,60 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
+            android:background="@drawable/shape"
             android:text=".?"
             android:textColor="@color/white"
-            android:textSize="50sp"
-            android:background="@drawable/shape"/>
+            android:textSize="50sp" />
 
         <Button
             android:id="@+id/Y2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/shape"
             android:text=".?"
             android:textColor="@color/white"
-            android:textSize="50sp"
-            android:background="@drawable/shape"/>
+            android:textSize="50sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <Button
+            android:id="@+id/BL1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/shape"
+            android:text=".?"
+            android:textColor="@color/white"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/G2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/shape"
+            android:text=".?"
+            android:textColor="@color/white"
+            android:textSize="50sp" />
+
+        <Button
+            android:id="@+id/BL2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/shape"
+            android:text=".?"
+            android:textColor="@color/white"
+            android:textSize="50sp" />
 
     </LinearLayout>
 </LinearLayout>
