--- a/app/src/main/res/layout/intro.xml
+++ b/app/src/main/res/layout/intro.xml
@@ -13,7 +13,8 @@
         android:padding="50dp"
         android:text="@string/intro"
         android:textColor="@color/black"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
    <LinearLayout
        android:layout_width="match_parent"
